Did not have a chance to draw DOM, got everything else done though

--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
+    <title> ic-02</title>
 
+    <h1 class="centered"> Intro to HTML and CSS</h1>
 
+    <h3 class="centered"> John Berry </h3> 
+    
+    <div id="div1", class="container"> 
+        <p id="p1"> 
+            This is the DOM for this webpage
+        </p>
+    </div>
+
+    <div id="div2", class="container"> 
+        <svg width="400" height="100">
+            <rect width="400" height="100" style="fill:rgb(90, 194, 179);stroke-width:5;stroke:rgb(0,0,0)" />
+        </svg>
+    </div>
+
+    <h3 class="centered">Acknowledgements</h3>
+
+    <div> 
+        <ul> 
+            <li>https://www.w3schools.com/css/default.asp</li> 
+            <li>https://www.w3schools.com/html/default.asp</li> 
+            <li>https://www.w3schools.com/tags/tag_ul.asp#:~:text=The%20tag%20defines%20an,use%20the%20tag.</li>
+            </ul>
+    </div>
 </body>
 
 </html>
